--- a/recommendation/deployment.yml
+++ b/recommendation/deployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: recommend-deployment
+  namespace: fs-service
 spec:
   replicas: 2
   selector:
@@ -14,7 +15,7 @@ spec:
     spec:
       containers:
       - name: recommend-container
-        image: 825958448855.dkr.ecr.ap-northeast-2.amazonaws.com/recommendation:14
+        image: 825958448855.dkr.ecr.ap-northeast-2.amazonaws.com/recommendation:test
         ports:
         - containerPort: 8080
 ---
@@ -22,9 +23,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: recommend-service
+  namespace: fs-service
 spec:
+  type: ClusterIP
   selector:
     app: recommend-tag
   ports:
-    - port: 8080
+    - port: 80
       targetPort: 8080
