--- a/recommendation/deployment.yml
+++ b/recommendation/deployment.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: recommend-container
-        image: 825958448855.dkr.ecr.ap-northeast-2.amazonaws.com/recommendation:test
+        image: 825958448855.dkr.ecr.ap-northeast-2.amazonaws.com/recommendation:14
         ports:
         - containerPort: 8080
 ---
