--- a/translate/deployment.yml
+++ b/translate/deployment.yml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: translate-deployment
+  namespace: fs-service
 spec:
   replicas: 2
   selector:
@@ -23,6 +24,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: translate-service
+  namespace: fs-service
 spec:
   selector:
     app: translate
