--- a/translate/deployment.yml
+++ b/translate/deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: translate-deployment
-  namespace: fs-service
+  namespace: fs-translate
 spec:
   replicas: 2
   selector:
@@ -25,7 +25,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: translate-service
-  namespace: fs-service
+  namespace: fs-translate
 spec:
   selector:
     app: translate
