--- a/recommendation/deployment.yml
+++ b/recommendation/deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: recommend-deployment
-  namespace: fs-service
+  namespace: fs-recommendation
 spec:
   replicas: 2
   selector:
@@ -23,7 +23,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: recommend-service
-  namespace: fs-service
+  namespace: fs-recommendation
 spec:
   type: ClusterIP
   selector:
