--- a/recent/deployment.yml
+++ b/recent/deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: recent-deployment
-  namespace: fs-service
+  namespace: fs-recent
 spec:
   replicas: 2
   selector:
@@ -24,7 +24,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: recent-service
-  namespace: fs-service
+  namespace: fs-recent
 spec:
   selector:
     app: recent
