--- a/bookmark/deployment.yml
+++ b/bookmark/deployment.yml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: bookmark-backend
-  namespace: fs-service
+  namespace: fs-bookmark
 spec:
   selector:
     matchLabels:
@@ -24,7 +24,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: bookmark-service
-  namespace: fs-service
+  namespace: fs-bookmark
 spec:
   type: ClusterIP
   ports:
