--- a/translate/deployment.yml
+++ b/translate/deployment.yml
@@ -27,6 +27,7 @@ metadata:
   name: translate-service
   namespace: fs-translate
 spec:
+  type: ClusterIP
   selector:
     app: translate
   ports:        
