--- a/translate/deployment.yml
+++ b/translate/deployment.yml
@@ -31,6 +31,5 @@ spec:
   selector:
     app: translate
   ports:        
-    - protocol: TCP 
-      port: 80
+    - port: 80
       targetPort: 8080
