--- a/bookmark/deployment.yml
+++ b/bookmark/deployment.yml
@@ -7,6 +7,7 @@ spec:
   selector:
     matchLabels:
       app: bookmark
+      sidecar.istio.io/inject: "true"
   replicas: 2
   template:
     metadata:
