--- a/bookmark/deployment.yml
+++ b/bookmark/deployment.yml
@@ -12,6 +12,7 @@ spec:
     metadata:
       labels:
         app: bookmark
+        sidecar.istio.io/inject: "true"
     spec:
       containers:
       - name: bookmark
